force-app/main/default/objects/ampi__Transaction_Project_IATI_Sector__c/ampi__Transaction_Project_IATI_Sector__c.object-meta.xml
<CustomObject>
    <description>Junction object connecting Allocations, Budgets and Disbursements to Project IATI Sector</description>
    <label>Transaction Project IATI Sector</label>
    <nameField>
        <displayFormat>TPIS-{0000}</displayFormat>
        <label>Transaction Project IATI Sector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions Project IATI Sectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>