force-app/main/default/objects/ampi__Transaction_Project_IATI_Sector__c/fields/ampi__Budget__c.field-meta.xml
<CustomField>
    <fullName>ampi__Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field specifies the parent budget for this juntion object</description>
    <label>Budget</label>
    <referenceTo>ampi__Budget__c</referenceTo>
    <relationshipLabel>Transactions Project IATI Sectors</relationshipLabel>
    <relationshipName>Transactions_Project_IATI_Sectors</relationshipName>
    <type>Lookup</type>
</CustomField>