force-app/main/default/objects/ampi__Transaction_Project_IATI_Sector__c/validationRules/ampi__Incorrect_Budget_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>ampi__Incorrect_Budget_Selected</fullName>
    <active>true</active>
    <description>Validation Rule to ensure that selected Budget looks upto same project that parent Project IATI Sector looks upto</description>
    <errorConditionFormula>AND((ampi__Budget__r.ampi__Project__c  &lt;&gt;  ampi__Project_IATI_Sector__r.ampi__Project__c),NOT(ISBLANK( ampi__Budget__c )) )</errorConditionFormula>
    <errorDisplayField>ampi__Budget__c</errorDisplayField>
    <errorMessage>Incorrect Budget Selected: Selected Budget should look upto same project that parent Project IATI Sector looks upto</errorMessage>
</ValidationRule>